[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MainMenu/AddNewResource.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Menus/left_arrow_normal.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Menus/right_arrow_normal.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Tiles/Resources/bread 2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/OpenSans-22.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Images/Menus/right_arrow_hover.svg" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Menus/right_arrow_pressed.svg" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Menus/left_arrow_pressed.svg" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Menus/left_arrow_hover.svg" type="Texture" id=9]

[node name="Panel" type="Panel"]
margin_right = 320.0
margin_bottom = 432.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="TextureButton" parent="."]
margin_left = 30.0
margin_right = 150.0
margin_bottom = 80.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="TextureButton" parent="."]
margin_left = 175.0
margin_right = 295.0
margin_bottom = 80.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceIcon" type="TextureRect" parent="."]
margin_left = 62.0
margin_top = 152.449
margin_right = 262.0
margin_bottom = 352.449
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddNewInstance" type="Button" parent="."]
margin_left = 2.0
margin_top = 351.0
margin_right = 158.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 195.224, 134.745 )
custom_fonts/font = ExtResource( 5 )
text = "Add Instance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteInstance" type="Button" parent="."]
margin_left = 159.876
margin_top = 350.502
margin_right = 317.876
margin_bottom = 430.502
rect_pivot_offset = Vector2( 195.224, 134.745 )
custom_fonts/font = ExtResource( 5 )
text = "Del. Instance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceName" type="Label" parent="."]
margin_left = 2.0
margin_top = 80.0
margin_right = 319.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ResourceName"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventLabel" type="RichTextLabel" parent="."]
margin_left = 52.0
margin_top = 122.0
margin_right = 277.0
margin_bottom = 174.0
custom_fonts/normal_font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="RightArrow" to="." method="_on_RightArrow_pressed"]
[connection signal="pressed" from="AddNewInstance" to="." method="_on_AddNewInstance_pressed"]
[connection signal="pressed" from="DeleteInstance" to="." method="_on_DeleteInstance_pressed"]
